[package]
name = "qscan"
version = "0.2.0"
description = "Quick async network scan library"
documentation = "https://docs.rs/qscan"
readme = "README.md"
authors = ["0xor0ne"]
license = "GPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/0xor0ne/qscan"
repository = "https://github.com/0xor0ne/qscan"
keywords = ["scanning", "network", "async"]
categories = ["network-programming"]

exclude = [
    "scripts/*",
    "Dockerfile",
]

[dependencies]
async-std = "1.11.0"
cidr-utils = "0.5.6"
futures = "0.3"
itertools = "0.10.3"

clap = { version = "3.1.18", features = ["derive"], optional = true }

[lib]
name = "qscan"
path = "src/lib.rs"

[features]
build-binary = ["clap"]

[[bin]]
name = "tcp_cs"
required-features = ["build-binary"]
path = "bin/tcp_cs.rs"

[profile.release]
strip = "symbols"
panic = "abort"

