[package]
name = "qsc"
version = "0.2.1"
description = "Quick async network scanner CLI"
documentation = "https://github.com/0xor0ne/qscan"
readme = "README.md"
authors = ["0xor0ne"]
license = "GPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/0xor0ne/qscan"
repository = "https://github.com/0xor0ne/qscan"
keywords = ["scanning", "network", "async", "port", "cli"]
categories = ["network-programming", "command-line-utilities"]

exclude = [
    "Dockerfile",
]

[dependencies]
qscan = { path = "../qscan", version = "0.4.1" }
tokio = { version = "1", features = ["rt"] }
clap = { version = "3.1.18", features = ["derive"] }

