[package]
name = "qscan"
version = "0.4.0"
description = "Quick async network scan library"
documentation = "https://docs.rs/qscan"
readme = "README.md"
authors = ["0xor0ne"]
license = "GPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/0xor0ne/qscan"
repository = "https://github.com/0xor0ne/qscan"
keywords = ["scanning", "network", "async", "port"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util"] }
cidr-utils = "0.5.6"
futures = "0.3"
itertools = "0.10.3"
trust-dns-resolver = { version = "0.21.2", features = ["dns-over-rustls"] }

